--- a/drivers/input/misc/fpc_fps_mmi/Kbuild
+++ b/drivers/input/misc/fpc_fps_mmi/Kbuild
@@ -1,21 +1,5 @@
-# add -Wall to try to catch everything we can.
-EXTRA_CFLAGS += -Wall
-EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include
-
-prod_list := devon
-find_target := $(foreach find, $(prod_list), $(findstring $(find), $(TARGET_PRODUCT)))
-find_target := $(strip $(find_target))
-$(warning find_target=$(find_target))
-ifneq ($(find_target),)
-$(warning define SUPPORT_PIN_CTRL)
-EXTRA_CFLAGS += -DSUPPORT_PIN_CTRL
-endif
-
-ifneq ($(filter m y,$(CONFIG_INPUT_MISC_FPC1020_SAVE_TO_CLASS_DEVICE)),)
-	EXTRA_CFLAGS += -DCONFIG_INPUT_MISC_FPC1020_SAVE_TO_CLASS_DEVICE
-endif
-
 fpc1020_mmi-y += fpc1020_tee.o
 
-obj-m += fpc1020_mmi.o
+ccflags-$(CONFIG_INPUT_MISC_FPC1020_SUPPORT_PIN_CTRL) += -DSUPPORT_PIN_CTRL
 
+obj-$(CONFIG_INPUT_MISC_FPC1020) += fpc1020_mmi.o
