--- a/drivers/misc/awinic/aw8695/Kbuild
+++ b/drivers/misc/awinic/aw8695/Kbuild
@@ -1,13 +1,4 @@
-# add -Wall to try to catch everything we can.
-ifneq ($(filter m y,$(CONFIG_AF_NOISE_ELIMINATION)),)
-	EXTRA_CFLAGS += -DCONFIG_AF_NOISE_ELIMINATION
-endif
+ccflags-$(CONFIG_AF_NOISE_ELIMINATION) += -DCONFIG_AF_NOISE_ELIMINATION
+ccflags-$(CONFIG_AW8965_VIBRATOR_SHORT_WAV_ENABLE) += -DCONFIG_AW8965_VIBRATOR_SHORT_WAV_ENABLE
 
-ifneq ($(filter y,$(CONFIG_AW8965_VIBRATOR_SHORT_WAV_ENABLE)),)
-	EXTRA_CFLAGS += -DCONFIG_AW8965_VIBRATOR_SHORT_WAV_ENABLE
-endif
-
-EXTRA_CFLAGS += -Wall
-EXTRA_CFLAGS += -I$(ANDROID_BUILD_TOP)/motorola/kernel/modules/include
-
-obj-m += aw8695.o
+obj-$(CONFIG_AW8695_HAPTIC) += aw8695.o
