--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -142,6 +142,7 @@ endif # BLOCK
 if BLOCK
 menu "DOS/FAT/EXFAT/NT Filesystems"
 
+source "fs/exfat/Kconfig"
 source "fs/fat/Kconfig"
 source "fs/exfat/Kconfig"
 source "fs/ntfs/Kconfig"
