--- a/techpack/audio/dsp/Kbuild
+++ b/techpack/audio/dsp/Kbuild
@@ -99,6 +99,7 @@ ifeq ($(KERNEL_BUILD), 0)
 		include $(AUDIO_ROOT)/config/sdm450auto.conf
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/sdm450autoconf.h
+	endif
 	ifneq (,$(filter nio%, $(TARGET_PRODUCT)))
                 INCS    +=  -include $(AUDIO_ROOT)/config/konanio.h
 	endif
